--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "gulp": "~3.9.0",
     "gulp-sass": "~2.0.4",
-    "gulp-typescript": "~2.9.2"
+    "gulp-typescript": "~2.9.2",
+    "systemjs": "~0.19.5"
   }
 }
