--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gulp-sass": "~2.0.4",
     "gulp-typescript": "~2.9.2",
     "systemjs": "~0.19.5",
-    "es6-promise": "~3.0.2",
-    "codemirror": "~5.10.0"
+    "codemirror": "~5.10.0",
+    "js-md5": "~0.4.0",
+    "es6-shim": "~0.35.0"
   }
 }
